[tool.poetry]
name = "agentmanager"
version = "0.1.0"
description = ""
authors = ["Alexandra La Cruz <alexandra.lacruz@jala.university>"]
readme = "README.md"
packages = [{include = "agentmanager", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
